<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">openHAB</string>
    <string name="openhab_service_type" translatable="false">_openhab-server-ssl._tcp.local.</string>
    <string name="openhab_demo_url" translatable="false">http://demo.openhab.org:8080/</string>
    <string name="main_menu">Main menu</string>
    <string name="app_preferences_name">Settings</string>
    <string name="app_notifications">Notifications</string>
    <string name="dlg_notification_title">Notification message</string>
    <string name="favorites">Favorites</string>
    <string name="empty_string" translatable="false"></string>
    <string name="mainmenu_openhab_sitemaps">Sitemaps</string>
    <string name="mainmenu_openhab_preferences">Settings</string>
    <string name="mainmenu_openhab_selectsitemap">Select default sitemap</string>
    <string name="mainmenu_openhab_clearcache">Clear images cache</string>
    <string name="settings_connection_title">Connection</string>
    <string name="settings_display_title">Display</string>
    <string name="settings_misc_title">Miscellaneous</string>
    <string name="settings_openhab_url">Local server URL</string>
    <string name="settings_openhab_url_summary">The URL of the openHAB dashboard (based on hostname or IP). If configured, autodiscovery is disabled. Current setting: %s</string>
    <string name="settings_openhab_alturl">Remote server URL</string>
    <string name="settings_openhab_alturl_summary">The URL of the openHAB dashboard used when the local address is unavailable. Current setting: %s</string>
    <string name="settings_openhab_username">Username</string>
    <string name="settings_openhab_password">Password</string>
    <string name="settings_openhab_sslclientcert">SSL client certificate</string>
    <string name="settings_openhab_sslclientcert_howto">SSL client certificate how-to</string>
    <string name="settings_openhab_sslclientcert_howto_summary">Tap here to get some hints and explanations on how to set up SSL client certificate authentication</string>
    <string name="settings_openhab_sslclientcert_howto_url" translatable="false">https://github.com/openhab/openhab.android/blob/master/KeyAuth.md</string>
    <string name="settings_openhab_screentimeroff">Disable display timer</string>
    <string name="settings_openhab_screentimeroff_summary">Disable display switch off timer when openHAB is running</string>
    <string name="settings_openhab_demomode">Demo mode</string>
    <string name="settings_openhab_demomode_summary">Run in demo mode</string>
    <string name="settings_openhab_theme">Theme</string>
    <string name="settings_openhab_sslcert">Ignore SSL certificate</string>
    <string name="settings_openhab_sslcert_summary">Ignore certificate validation during SSL handshake</string>
    <string name="settings_openhab_sslhost">Ignore SSL hostname</string>
    <string name="settings_openhab_sslhost_summary">Ignore hostname check during SSL handshake</string>
    <string name="settings_openhab_fullscreen">Fullscreen</string>
    <string name="settings_openhab_fullscreen_summary">Display in fullscreen mode</string>
    <string name="settings_openhab_icon_format">Icon format</string>
    <string name="settings_openhab_icon_format_value_png" translatable="false">PNG</string>
    <string name="settings_openhab_icon_format_value_svg" translatable="false">SVG</string>
    <string name="settings_openhab_icon_format_png">Bitmap</string>
    <string name="settings_openhab_icon_format_svg">Vector</string>
    <string name="settings_ringtone">Ring tone</string>
    <string name="settings_clear_default_sitemap">Clear default sitemap</string>
    <string name="settings_no_default_sitemap">No default sitemap selected</string>
    <string name="settings_current_default_sitemap">Current default sitemap: %1$s</string>
    <string name="settings_openhab_sslsettings">Encryption</string>
    <string name="settings_openhab_alt_connection">Remote</string>
    <string name="settings_openhab_connection">Local</string>
    <string name="title_voice_widget">openHAB Voice Commands</string>
    <string name="title_homescreen_widget">OpenHAB Home screen Widget</string>
    <string name="info_voice_input">"openHAB, at your command!"</string>
    <string name="info_voice_recognized_text">"Recognized command: %1$s"</string>
    <string name="info_demo_mode">Running in demo mode. To connect to your openHAB server please go to settings menu.</string>
    <string name="info_demo_mode_short">Running in demo mode</string>
    <string name="info_conn_url">Connecting to local URL</string>
    <string name="info_conn_rem_url">Connecting to remote URL</string>
    <string name="info_discovery">Discovering openHAB. Please wait\u2026</string>
    <string name="error_no_url">Please check that openHAB is running or configure openHAB URL or remote URL</string>
    <string name="error_empty_sitemap_list">openHAB returned empty sitemap list</string>
    <string name="error_network_not_available">Network is not available</string>
    <string name="error_http_connection_failed">Connection unsuccessful. An unexpected response was received while trying to connect to the configured openHAB server (Received HTTP response code: %d)</string>
    <string name="error_no_uuid">Unable to get openHAB UUID, connection failed</string>
    <string name="error_invalid_url">Please enter a valid URL in a \'http(s)://host(:port)/\' form</string>
    <string name="error_connection_failed">Connection to host failed</string>
    <string name="error_unable_to_resolve_hostname">Unable to resolve hostname</string>
    <string name="error_connection_sslhandshake_failed">SSL handshake failed</string>
    <string name="error_certificate_not_trusted">SSL certificate is not trusted. Please import the root certificate or disable certificate validation during SSL handshake</string>
    <string name="error_certificate_expired">SSL certificate has been expired. Please get a new certificate or disable certificate validation during SSL handshake</string>
    <string name="error_certificate_not_valid_yet">SSL certificate is not valid yet. Please get a correct certificate or disable certificate validation during SSL handshake. Also check if the clock on your device is set correctly</string>
    <string name="error_certificate_revoked">SSL certificate has been revoked. Please get a new certificate or disable certificate validation during SSL handshake</string>
    <string name="error_certificate_wrong_host">SSL certificate is not valid for %s</string>
    <string name="error_http_code_401">Authentication failed. Please check the configured username and password respectively the provided SSL client certificate (HTTP response code 401)</string>
    <string name="error_http_code_403">Authentication failed. Please check the configured username and password respectively the provided SSL client certificate (HTTP response code 403)</string>
    <string name="error_http_code_407">Authentication failed. Please check the configured username and password respectively the provided SSL client certificate (HTTP response code 407)</string>
    <string name="error_http_code_414">URL is too long. Please use the IP address or a shorter URL (HTTP response code 414)</string>
    <string name="error_http_code_426">HTTPS is required. Please change the URL (HTTP response code 426)</string>
    <string name="error_http_code_495">Authentication failed. Please check the provided SSL client certificate (HTTP response code 495)</string>
    <string name="error_http_code_496">SSL client certificate is required (HTTP response code 496)</string>
    <string name="error_http_code_502">Your reverse proxy got an invalid answer from the openHAB server (HTTP response code 502)</string>
    <string name="error_http_code_503">The openHAB server is temporarily unavailable (HTTP response code 503)</string>
    <string name="error_http_code_504">Gateway Time-out. Seems that your reverse proxy is running, but couldn\'t get an answer from the openHAB server (HTTP response code 504)</string>
    <string name="error_http_code_507">The openHAB server hasn\'t enough free space (HTTP response code 507)</string>
    <string name="error_http_code_511">Network authentication is required (HTTP response code 511)</string>
    <string name="title_activity_openhabwritetag">Write NFC tag</string>
    <string name="title_activity_openhabinfo">openHAB Information</string>
    <string name="title_activity_libraries">Used Libraries</string>
    <string name="title_activity_homescreen_widget_configuration">Settings</string>
    <string name="info_write_tag">Touch the tag and keep it close until the confirmation message appear</string>
    <string name="info_write_tag_progress">Writing the tag</string>
    <string name="info_write_tag_finished">Successfully finished</string>
    <string name="info_write_failed">Tag write error</string>
    <string name="info_write_tag_unsupported">This device doesn\'t have NFC support</string>
    <string name="info_write_tag_disabled">NFC is disabled. Please enable it in device settings menu.</string>
    <string name="info_openhab_version_label">openHAB Version</string>
    <string name="info_openhab_apiversion_label">openHAB Rest API version</string>
    <string name="info_openhab_uuid_label">openHAB UUID</string>
    <string name="info_openhab_secret_label">openHAB Secret</string>
    <string name="info_openhab_gcm_label">Google Cloud Messaging Status</string>
    <string name="info_openhab_gcm_not_connected">Device registration failed</string>
    <string name="info_openhab_gcm_connected">Registered device with Sender ID %s</string>
    <string name="action_settings">Settings</string>
    <string name="nfc_dialog_title">Write NFC tag action for this element</string>
    <string name="info_not_set">Not set</string>
    <string name="password_placeholder" translatable="false">\u25cf\u25cf\u25cf\u25cf\u25cf\u25cf</string>
    <string name="mtm_accept_cert">Accept unknown Certificate?</string>
    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>
    <string name="mtm_notification">Certificate verification</string>
    <string name="settings_openhab_none">none</string>
    <string name="theme_value_light" translatable="false">light</string>
    <string name="theme_value_dark" translatable="false">dark</string>
    <string name="theme_value_black" translatable="false">black</string>
    <string name="theme_value_basic_ui" translatable="false">basicui</string>
    <string name="theme_value_basic_ui_dark" translatable="false">basicuidark</string>
    <string name="theme_name_light">Light</string>
    <string name="theme_name_dark">Dark</string>
    <string name="theme_name_black">Black/AMOLED</string>
    <string name="theme_name_basic_ui">Basic UI</string>
    <string name="theme_name_basic_ui_dark">Basic UI dark</string>
    <string name="nfc_action_on">On</string>
    <string name="nfc_action_up">Up</string>
    <string name="nfc_action_off">Off</string>
    <string name="nfc_action_down">Down</string>
    <string name="nfc_action_toggle">Toggle</string>
    <string name="nfc_activate">Activate</string>
    <string name="nfc_action_current_color">Current color</string>
    <string name="nfc_action_to_sitemap_page">Navigate to Sitemap page</string>
    <string name="drawer_open">Sitemap drawer opened</string>
    <string name="drawer_close">Sitemap drawer closed</string>
    <string name="ask_for_pin">Ask for pin...</string>
    <string name="hint_enter_pin">Enter pin</string>
    <string name="selected_icon">selected icon</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="label">Label</string>
    <string name="save">save</string>
</resources>