<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="org.openhab.habdroid.ui.HomescreenWidgetConfigurationActivity"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <!--
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:elevation="10dp"
            android:minHeight="40dp"
            android:minWidth="40dp"
            android:orientation="vertical"
            >

            <include
                layout="@layout/homescreen_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        -->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/label"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <EditText
            android:id="@+id/itemLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/ask_for_pin"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/pinMode"
                />

            <EditText
                android:id="@+id/pinText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/hint_enter_pin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:text="" />
        </LinearLayout>

        <TextView
            android:id="@+id/iconLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/choose_icon"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />


        <ImageButton
            android:id="@+id/icon_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/selected_icon"
            android:src="@android:drawable/btn_star" />


        <Button
            android:id="@+id/buttonSaveWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/save" />

    </LinearLayout>
</RelativeLayout>
